# smarthome

./: ha.yaml  home-assitant-k8s.yaml
ac_ir_controller/: Dockerfile  README.md  deployment.yaml  main.py  pyproject.toml  settings.py
cards/: temp_card.yaml
mail_rss_service/: .gitignore  Dockerfile  README.md  deployment.yaml  email_fetcher.py  email_poller.py  main.py  openai_parser.py  pyproject.toml  rss_manager.py  settings.py
mail_rss_service/src/: email_fetcher.py  email_poller.py  openai_parser.py  rss_manager.py
