[project]
name = "mail-rss-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.120.0",
    "feedgen>=1.0.0",
    "imap-tools>=1.11.0",
    "lxml>=6.0.2",
    "openai>=2.6.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.38.0",
]
